Fix DateOfAcquisition not showing in UpdateForm

--- a/src/components/ApplicationForm.css
+++ b/src/components/ApplicationForm.css
@@ -171,7 +171,7 @@ input[type="file"] {
         }
 
         .formRemove-file-button {
-            border-radius: 5px;
+            border-radius: 4px;
             border: 1px solid black;
             display: flex;
             align-items: center;
